--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -2,7 +2,7 @@
 <nav class="mb-3 pt-md-2" aria-label="Breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a [routerLink]="'/customer/header/item_shop_search'">Home</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Find item</li>
+    <li class="breadcrumb-item active" aria-current="page">Search Item</li>
   </ol>
 </nav>
 
