--- a/Frontend/src/app/app-customer/view/search-result/shop-search-result/shop-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/shop-search-result/shop-search-result.component.html
@@ -2,7 +2,7 @@
 <nav class="mb-3 pt-md-2" aria-label="Breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="./indexo.html">Home</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Find shop</li>
+    <li class="breadcrumb-item active" aria-current="page">Search Shop</li>
   </ol>
 </nav>
 
