--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
@@ -16,7 +16,7 @@
     <!-- Tabs content-->
     <div class="tab-content">
       <!-- Item View-->
-      <div class="tab-pane fade show active" id="item-view" role="tabpanel">
+      <div class="tab-pane fade show active" id="package-view" role="tabpanel">
         <div class="row">
           <div class="row g-2 g-md-3 gallery" data-thumbnails="true" style="min-width: 30rem;">
             <!--<div class="col-8"><a class="gallery-item rounded rounded-md-3" href="./asset/img/catalog/01.jpg"-->
@@ -271,7 +271,7 @@
       </div>
 
       <!--Item Edit-->
-      <div class="tab-pane fade" id="item-edit" role="tabpanel" *ngIf="itemPackageObj.backBtn===undefined">
+      <div class="tab-pane fade" id="package-edit" role="tabpanel" *ngIf="itemPackageObj.backBtn===undefined">
         <div class="card card-body">
           <form #baManageFormPackageE="ngForm"
                 (ngSubmit)="baManageFormPackageE.form.valid && (packageItem.itemPackage.itemImgsRaw.length+packageItem.itemPackage.itemPackageImages.length)>=3 && onSubmit()"
@@ -666,7 +666,7 @@
         </div>
       </div>
 
-      <div class="tab-pane fade" id="item-review" role="tabpanel">
+      <div class="tab-pane fade" id="package-review" role="tabpanel">
         <div class="card card-body">
           <!-- Reviews-->
           <div class="mb-4 pb-4 border-bottom">
@@ -692,7 +692,8 @@
             </div>
           </div>
           <!-- Review-->
-          <div class="mb-4 pb-4 border-bottom" *ngFor="let itemPackageReview of itemPackageReviews">
+          <div class="mb-4 pb-4" *ngFor="let itemPackageReview of itemPackageReviews;let isLast=last"
+               [ngClass]="!isLast?'border-bottom':''">
             <div class="d-flex justify-content-between mb-3">
               <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
                                                                src="assets/img/37.png" width="48" alt="Avatar">
@@ -700,12 +701,12 @@
                   <h6 class="fs-base mb-0">
                     {{itemPackageReview.customerProfile.firstName + ' ' + itemPackageReview.customerProfile.lastName}}
                   </h6>
-                  <!--<span class="star-rating"><i-->
-                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
-                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
-                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
-                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
-                  <!--class="star-rating-icon fi-star-filled active"></i></span>-->
+                  <span class="star-rating">
+                      <i *ngFor="let rating of [].constructor(itemPackageReview.tempRating)"
+                         class="star-rating-icon fi-star-filled active"></i>
+                      <i *ngFor="let rating of [].constructor(5-itemPackageReview.tempRating)"
+                         class="star-rating-icon fi-star-filled"></i>
+                    </span>
                 </div>
               </div>
               <!--<span class="text-muted fs-sm">Jan 17, 2021</span>-->
@@ -738,7 +739,7 @@
   <div class="offcanvas-footer border-top" style="display: block;">
     <ul class="nav nav-tabs justify-content-end" role="tablist">
       <li class="nav-item me-2" *ngIf="itemPackageObj.backBtn!==undefined && !review">
-        <a class="btn btn-md btn-outline-info item-viewer-g-btn" [attr.data-bs-target]="'#'+itemPackageObj.backBtn"
+        <a class="btn btn-md btn-outline-info package-viewer-g-btn" [attr.data-bs-target]="'#'+itemPackageObj.backBtn"
            role="tab" (click)="goBack()"><i
           class="fi-arrow-back fs-lg me-2"></i>Back</a>
       </li>
@@ -748,22 +749,22 @@
           <!--class="fi-arrow-back fs-lg me-2"></i>Back</a>-->
       <!--</li>-->
       <li class="nav-item me-2" *ngIf="review || backBtn"  (click)="backBtn=false">
-        <a id="package-back-btn" class="btn btn-md btn-outline-info item-viewer-g-btn" href="#item-view" data-bs-toggle="tab"
+        <a id="package-back-btn" class="btn btn-md btn-outline-info package-viewer-g-btn" href="#package-view" data-bs-toggle="tab"
            role="tab" (click)="review=false"><i
           class="fi-arrow-back fs-lg me-2"></i>Back</a>
       </li>
       <li class="nav-item me-2" *ngIf="itemPackageObj.backBtn===undefined" (click)="backBtn=true">
-        <a class="btn btn-md btn-outline-primary" href="#item-edit" data-bs-toggle="tab" role="tab"><i
+        <a class="btn btn-md btn-outline-primary" href="#package-edit" data-bs-toggle="tab" role="tab"><i
           class="fi-edit fs-lg me-2"></i>Edit</a>
       </li>
       <li class="nav-item me-2" *ngIf="itemPackageObj.backBtn===undefined">
         <a class="btn btn-md btn-outline-danger" rel="noopener"
-           data-bs-toggle="modal" data-bs-target="#confirm-dialog-item-edit"
+           data-bs-toggle="modal" data-bs-target="#confirm-dialog-package-edit"
            (click)="setDialogBox('Do you want to remove <b>'+packageItem.itemPackage.name+'</b> ?',false)">
           <i class="fi-trash fs-lg me-2"></i>Remove</a>
       </li>
       <li class="nav-item me-2" (click)="backBtn=true">
-        <a class="btn btn-md btn-outline-primary" href="#item-review" data-bs-toggle="tab" role="tab"
+        <a class="btn btn-md btn-outline-primary" href="#package-review" data-bs-toggle="tab" role="tab"
            (click)="getItemPackageReviews()">
           <i class="fi-star fs-lg me-2"></i>Reviews</a>
       </li>
@@ -776,7 +777,7 @@
   </div>
 </div>
 
-<div id="confirm-dialog-item-edit" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"
+<div id="confirm-dialog-package-edit" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"
      style="z-index: 999999999">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
